# HoaLibrary-PD

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile.am  README.md  appveyor.yml  changelog.txt  configure.ac  hoa.library.cbp  hoa.library.cpp  hoa.library.depend  hoa.library.h  hoa.library.hpp  hoa.library.layout  hoa.library.sln  hoa.library.vcxproj  hoa.library.vcxproj.filters  hoa.pd.h  hoa.pd_commonsyms.h
Hoa.xcodeproj/: project.pbxproj
Hoa.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PD2D/: Hoa2D.pd.h  hoa.2d.decoder_tilde.cpp  hoa.2d.encoder_tilde.cpp  hoa.2d.map_tilde.cpp  hoa.2d.meter_gui_tilde.cpp  hoa.2d.optim_tilde.cpp  hoa.2d.projector_tilde.cpp  hoa.2d.recomposer_tilde.cpp  hoa.2d.rotate_tilde.cpp  hoa.2d.scope_gui_tilde.cpp  hoa.2d.space_gui.cpp  hoa.2d.wider_tilde.cpp
PD3D/: Hoa3D.pd.h  hoa.3d.decoder_tilde.cpp  hoa.3d.map_tilde.cpp  hoa.3d.meter_gui_tilde.cpp  hoa.3d.scope_gui_tilde.cpp
PDCommon/: HoaCommon.pd.h  hoa.connect.cpp  hoa.dac_tilde.cpp  hoa.io.cpp  hoa.map_gui.cpp  hoa.process_tilde.cpp  hoa.thisprocess_tilde.cpp  hoa.tools.cpp
Package/Hoa/: Hoa-help.pd  Makefile.am  README.txt  hoa-help.pd
Package/Hoa/helps/: Makefile.am  hoa.2d.decoder~-help.pd  hoa.2d.encoder~-help.pd  hoa.2d.exchanger~-help.pd  hoa.2d.map~-help.pd  hoa.2d.meter~-help.pd  hoa.2d.optim~-help.pd  hoa.2d.projector~-help.pd  hoa.2d.recomposer~-help.pd  hoa.2d.rotate~-help.pd  hoa.2d.scope~-help.pd  hoa.2d.space-help.pd  hoa.2d.wider~-help.pd  hoa.3d.decoder~-help.pd  hoa.3d.encoder~-help.pd  hoa.3d.exchanger~-help.pd  hoa.3d.map~-help.pd  hoa.3d.meter~-help.pd  hoa.3d.optim~-help.pd  hoa.3d.scope~-help.pd  hoa.3d.wider~-help.pd  hoa.connect-help.pd  hoa.dac~-help.pd  hoa.fx.convolve~-help.pd  hoa.fx.delay~-help.pd  hoa.fx.freeverb~-help.pd  hoa.fx.gain~-help.pd  hoa.fx.mirror~-help.pd  hoa.fx.ringmod~-help.pd  hoa.io-help.pd  hoa.map-help.pd  hoa.pi-help.pd  hoa.pi~-help.pd  hoa.process~-help.pd  hoa.syn.delay~-help.pd  hoa.syn.encoder~-help.pd  hoa.syn.grain~-help.pd  hoa.syn.ringmod~-help.pd  hoa.thisprocess~-help.pd
Package/Hoa/media/: Makefile.am
Package/Hoa/misc/: Makefile.am  hoa.2d.txt  hoa.3d.txt  hoa.args.map.pd  hoa.help.also.pd  hoa.help.header.pd  hoa.help.pub.pd  hoa.ioexample~.pd  hoa.objects.txt  hoa.process.display.pd  hoa.process.txt  hoa.processexample.pd  hoa.procexample~.pd  hoa.pw.2d.dec~.pd  hoa.soundcoat.pd  hoa.soundgrain.pd  hoa.soundrone.pd  hoa.thisprocexample2~.pd  hoa.thisprocexample~.pd  hoa.tri~.pd  hoa.tuto.header.pd  hoa.tuto.txt  hoa.tutos.txt
Package/Hoa/patchers/: Makefile.am  hoa.fx.2d.decoder~.pd  hoa.fx.2d.rotate~.pd  hoa.fx.convolve~.pd  hoa.fx.delay2~.pd  hoa.fx.delay~.pd  hoa.fx.dephaser~.pd  hoa.fx.freeverb~.pd  hoa.fx.mirror~.pd  hoa.fx.optim~.pd  hoa.fx.sum~.pd  hoa.fx.wider~.pd  hoa.syn.2d.encoder~.pd  hoa.syn.3d.encoder~.pd  hoa.syn.delay~.pd  hoa.syn.encoder~.pd  hoa.syn.ringmod~.pd
Package/Hoa/tutorials/: Makefile.am  Tutorial_1.pd  Tutorial_10.pd  Tutorial_11.pd  Tutorial_1_Decoding.pd  Tutorial_1_Encoding.pd  Tutorial_1_Harmonics.pd  Tutorial_1_Introduction.pd  Tutorial_1_Resolution.pd  Tutorial_1_Space.pd  Tutorial_2.pd  Tutorial_2_Introduction.pd  Tutorial_2_Space.pd  Tutorial_3.pd  Tutorial_4.pd  Tutorial_5.pd  Tutorial_6.pd  Tutorial_7.pd  Tutorial_8.pd  Tutorial_9.pd  hoa.tools.2d.pd  hoa.tools.3d.pd
Package/HoaLibrary/: hoa.library-help.pd
Sources/: Makefile.am  hoa.3d.meter_gui_tilde.cpp  hoa.decoder_tilde.cpp  hoa.encoder_tilde.cpp  hoa.exchanger_tilde.cpp  hoa.io.cpp  hoa.map_gui.cpp  hoa.map_tilde.cpp  hoa.meter_gui_tilde.cpp  hoa.normalize.cpp  hoa.optim_tilde.cpp  hoa.process_tilde.cpp  hoa.projector_tilde.cpp  hoa.recomposer_tilde.cpp  hoa.rotate_tilde.cpp  hoa.scope_gui_tilde.cpp  hoa.space_gui.cpp  hoa.tools.cpp  hoa.wider_tilde.cpp
hoa/: hoa-help.pd  hoa.2d.decoder~-help.pd  hoa.2d.encoder~-help.pd  hoa.2d.fx.delay~.pd  hoa.2d.meter~-help.pd  hoa.2d.meter~.pd  hoa.2d.optim~-help.pd  hoa.2d.process~-help.pd  hoa.2d.projector~-help.pd  hoa.2d.rotate~-help.pd  hoa.2d.scope~-help.pd  hoa.2d.syn.grain~-help.pd  hoa.2d.syn.grain~.pd  hoa.2d.wider~-help.pd  hoa.3d.encoder~-help.pd  hoa.3d.process~-help.pd  hoa.3d.scope~.pd  hoa.3d.wider~-help.pd  hoa.credits.pd  hoa.io-help.pd  hoa.pi-help.pd  hoa.pi~-help.pd
hoa.library.xcodeproj/: project.pbxproj
hoa/helps/: hoa.2d.decoder~-help.pd  hoa.2d.encoder~-help.pd  hoa.2d.optim~-help.pd  hoa.2d.process~-help - copie.pd  hoa.2d.process~-help.pd  hoa.2d.rotate~-help.pd  hoa.2d.scope~-help.pd  hoa.2d.scope~.pd  hoa.2d.wider~-help.pd  hoa.3d.decoder~-help.pd  hoa.3d.encoder~-help.pd  hoa.3d.optim~-help.pd  hoa.3d.process~-help.pd  hoa.connect-help.pd  hoa.credits.pd  hoa.dac~-help.pd  hoa.io-help.pd  hoa.pi-help.pd  hoa.pi~-help.pd  hoa.processexample2.pd  hoa.syn.delay~-help.pd  hoa.syn.grain~-help.pd
hoa/misc/: hoa.hgain~.pd  hoa.number~.pd  hoa.proc.ex2.pd  hoa.proc.harmo.ex.pd  hoa.proc.plwav.ex.pd  hoa.vmeter~.pd
hoa/patchers/: hoa.fx.2d.decoder~.pd  hoa.fx.freeverb~.pd  hoa.fx.gain~.pd  hoa.fx.mirror~.pd  hoa.gui.2d.scope~.pd  hoa.syn.grain~.pd
hoa/temp/: hoa.fx.2d.rotate~.pd  hoa.fx.dephaser~-help.pd  hoa.fx.dephaser~.pd  hoa.fx.ringmod~-help.pd  hoa.fx.ringmod~.pd  hoa.proc.ex.pd  hoa.syn.ringmod~.pd
hoa/tutorials/: Tutorial_1.pd  Tutorial_10.pd  Tutorial_3.pd  hoa.2d.tools.pd  hoa.3d.tools.pd
souces/: hoa.io.cpp  hoa.tools.cpp
sources/: hoa.2d.decoder_tilde.cpp  hoa.connect.c  hoa.pd.c  hoa.pd.h  hoa.pi.c
sources/2d/: hoa.2d.decoder_tilde.cpp  hoa.2d.encoder_tilde.cpp  hoa.2d.map_tilde.cpp  hoa.2d.optim_tilde.cpp  hoa.2d.process_tilde.c  hoa.2d.projector_tilde.cpp  hoa.2d.recomposer_tilde.cpp  hoa.2d.rotate_tilde.cpp  hoa.2d.wider_tilde.cpp
sources/3d/: hoa.3d.decoder_tilde.cpp  hoa.3d.encoder_tilde.cpp  hoa.3d.optim_tilde.cpp  hoa.3d.process_tilde.c  hoa.3d.wider_tilde.cpp
sources/common/: hoa.2d.process_tilde.c  hoa.connect.c  hoa.dac_tilde.c  hoa.in.c  hoa.in_tilde.c  hoa.out.c  hoa.out_tilde.c  hoa.pi.c  hoa.pi_tilde.c  hoa.process_instance.c  hoa.process_tilde.cpp  hoa.thisprocess_tilde.c
(+40 files in other folders)
