AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.libraryhelpdir=$(pkglibdir)/helps

dist_hoa.libraryhelp_DATA = \
hoa.3d.scope~-help.pd \
hoa.3d.wider~-help.pd \
hoa.connect-help.pd \
hoa.dac~-help.pd \
hoa.2d.decoder~-help.pd	\
hoa.fx.convolve~-help.pd \
hoa.2d.encoder~-help.pd \
hoa.fx.delay~-help.pd \
hoa.2d.map~-help.pd	\
hoa.fx.freeverb~-help.pd \
hoa.2d.meter~-help.pd \
hoa.fx.gain~-help.pd \
hoa.2d.optim~-help.pd \
hoa.fx.mirror~-help.pd \
hoa.2d.projector~-help.pd \
hoa.fx.ringmod~-help.pd \
hoa.2d.recomposer~-help.pd \
hoa.io-help.pd \
hoa.2d.rotate~-help.pd \
hoa.map-help.pd \
hoa.2d.scope~-help.pd \
hoa.pi-help.pd \
hoa.2d.space-help.pd \
hoa.pi~-help.pd \
hoa.2d.wider~-help.pd \
hoa.process~-help.pd \
hoa.3d.decoder~-help.pd	\
hoa.syn.delay~-help.pd \
hoa.3d.encoder~-help.pd \
hoa.syn.encoder~-help.pd \
hoa.3d.map~-help.pd \
hoa.syn.grain~-help.pd \
hoa.3d.meter~-help.pd \
hoa.syn.ringmod~-help.pd \
hoa.3d.optim~-help.pd \
hoa.thisprocess~-help.pd