AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.librarymiscdir=$(pkglibdir)/misc

dist_hoa.librarymisc_DATA = \
hoa.pw.2d.dec~.pd \
hoa.process.display.pd \
hoa.processexample.pd \
hoa.procexample~.pd \
hoa.soundcoat.pd \
hoa.2d.txt \
hoa.soundgrain.pd \
hoa.3d.txt \
hoa.soundrone.pd \
hoa.args.map.pd \
hoa.thisprocexample2~.pd \
hoa.common.txt \
hoa.thisprocexample~.pd \
hoa.help.also.pd \
hoa.tri~.pd \
hoa.help.header.pd \
hoa.tuto.gain~.pd \
hoa.help.pub.pd	\
hoa.tuto.header.pd \
hoa.ioexample~.pd \
hoa.tuto.txt \
hoa.mode.sel.pd \
hoa.tutos.txt \
hoa.objects.txt \
logo.gif \
hoa.process.txt