AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.librarypatchersdir=$(pkglibdir)/patchers

dist_hoa.librarypatchers_DATA = \
hoa.fx.delay~.pd \
hoa.fx.sum~.pd \
hoa.fx.freeverb~.pd	\
hoa.syn.delay~.pd \
hoa.fx.gain~.pd	\
hoa.syn.encoder~.pd \
hoa.fx.convolve~.pd	\
hoa.fx.mirror~.pd \
hoa.syn.grain~.pd \
hoa.fx.delay2~.pd \
hoa.fx.ringmod~.pd \
hoa.syn.ringmod~.pd