AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.librarypatchersdir=$(pkglibdir)/patchers

dist_hoa.librarypatchers_DATA = \
hoa.fx.2d.decoder~.pd \
hoa.fx.2d.rotate~.pd \
hoa.fx.convolve~.pd	\
hoa.fx.delay~.pd \
hoa.fx.delay2~.pd \
hoa.fx.freeverb~.pd	\
hoa.fx.gain~.pd	\
hoa.fx.mirror~.pd \
hoa.fx.optim~.pd \
hoa.fx.ringmod~.pd \
hoa.fx.sum~.pd \
hoa.fx.wider~.pd \
hoa.syn.2d.encoder~.pd \
hoa.syn.3d.encoder~.pd \
hoa.syn.delay~.pd \
hoa.syn.grain~.pd \
hoa.syn.ringmod~.pd