AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.librarytutorialsdir=$(pkglibdir)/tutorials

dist_hoa.librarytutorials_DATA = \
hoa.tools.2d.pd \
hoa.tools.3d.pd \
Tutorial_1_Introduction.pd \
Tutorial_1_Resolution.pd \
Tutorial_1_Space.pd \
Tutorial_1.pd \
Tutorial_2.pd \
Tutorial_1_Decoding.pd \
Tutorial_2_Introduction.pd \
Tutorial_1_Encoding.pd \
Tutorial_2_Space.pd \
Tutorial_1_Harmonics.pd
