AUTOMAKE_OPTIONS = foreign

SUFFIXES = .pd

hoa.librarytutorialsdir=$(pkglibdir)/tutorials

dist_hoa.librarytutorials_DATA = \
hoa.tools.2d.pd \
hoa.tools.3d.pd \
Tutorial_1.pd \
Tutorial_2.pd \
Tutorial_3.pd \
Tutorial_4.pd \
Tutorial_5.pd \
Tutorial_6.pd \
Tutorial_7.pd \
Tutorial_8.pd \
Tutorial_9.pd \
Tutorial_10.pd \
Tutorial_11.pd \
Tutorial_12.pd
